--- a/module_login/src/main/res/layout/activity_login.xml
+++ b/module_login/src/main/res/layout/activity_login.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <include layout="@layout/toolbar"/>
+    <include layout="@layout/toolbar" />
+    <!--<include layout="@layout/mytoolbar" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
