--- a/module_person/src/main/res/layout/fragment_person.xml
+++ b/module_person/src/main/res/layout/fragment_person.xml
@@ -6,8 +6,9 @@
 
     <TextView
         android:id="@+id/tologin"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:gravity="center"
         android:text="个人" />
 
