--- a/module_login/src/main/res/layout/activity_login.xml
+++ b/module_login/src/main/res/layout/activity_login.xml
@@ -1,155 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/llContentView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:fitsSystemWindows="true"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:orientation="vertical"
     tools:context=".LoginActivity">
 
     <include layout="@layout/toolbar" />
 
-    <ImageView
-        android:layout_width="86dp"
-        android:layout_height="86dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/vector_clean" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"
-        android:layout_marginLeft="44dp"
-        android:layout_marginRight="44dp"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="55dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/account"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@android:color/transparent"
-                android:hint="手机号"
-                android:inputType="number"
-                android:padding="6dp"
-                android:singleLine="true"
-                android:textColor="@android:color/black"
-                android:textColorHint="@color/gray_3"
-                android:textCursorDrawable="@null"
-                android:textSize="16sp" />
-
-            <ImageView
-                android:id="@+id/clean"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:layout_marginLeft="10dp"
-                android:src="@drawable/vector_clean" />
-
-        </LinearLayout>
-
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/gray_3" />
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="38dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@android:color/transparent"
-                android:hint="请输入密码"
-                android:inputType="textPassword"
-                android:minEms="4"
-                android:padding="6dp"
-                android:singleLine="true"
-                android:textColor="@android:color/black"
-                android:textColorHint="@color/gray_3"
-                android:textCursorDrawable="@null"
-                android:textSize="16sp" />
-
-            <ImageView
-                android:id="@+id/eyes"
-                android:layout_width="12dp"
-                android:layout_height="15dp"
-                android:layout_marginLeft="10dp"
-                android:src="@drawable/vector_eyes" />
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/gray_3" />
-
-        <com.flyco.roundview.RoundTextView
-            android:id="@+id/login"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:layout_marginTop="49dp"
-            android:gravity="center"
-            android:text="登录"
-            android:textColor="@color/white"
-            app:rv_backgroundColor="#000000"
-            app:rv_backgroundPressColor="@color/gray_3"
-            app:rv_isRadiusHalfHeight="true"
-            app:rv_isRippleEnable="false"
-            app:rv_strokeColor="#000000"
-            app:rv_strokePressColor="@color/gray_3"
-            app:rv_strokeWidth="1dp"
-            app:rv_textPressColor="@color/white" />
-
-        <com.flyco.roundview.RoundTextView
-            android:id="@+id/msglogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginTop="15dp"
-            android:gravity="right"
-            android:text="短信验证码登录"
-            android:textColor="#282B2E"
-            android:textSize="12sp"
-            app:rv_textPressColor="@color/gray" />
-    </LinearLayout>
-
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
-
-    <com.flyco.roundview.RoundTextView
-        android:id="@+id/register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center"
-        android:layout_marginBottom="49dp"
-        android:gravity="center"
-        android:text="注册 | 社交账号登录"
-        android:textColor="#282B2E"
-        android:textSize="12sp"
-        app:rv_textPressColor="@color/gray" />
-</LinearLayout>
+</RelativeLayout>
