--- a/dinlive_baselib/src/main/res/values/colors.xml
+++ b/dinlive_baselib/src/main/res/values/colors.xml
@@ -23,4 +23,6 @@
     <color name="blue">#13227a</color>
     <color name="blue_1">#1296db</color>
 
+    <color name="dark">#353535</color>
+
 </resources>
