--- a/dinlive_baselib/src/main/res/values/attrs.xml
+++ b/dinlive_baselib/src/main/res/values/attrs.xml
@@ -14,4 +14,12 @@
         <attr name="retryResource" format="reference" />
         <attr name="loadingResource" format="reference" />
     </declare-styleable>
+
+    <declare-styleable name="RealtimeBlurView">
+        <attr name="realtimeBlurRadius" format="dimension"/>
+        <attr name="realtimeDownsampleFactor" format="float"/>
+        <attr name="realtimeOverlayColor" format="color"/>
+        <attr name="xRadius" format="dimension"/>
+        <attr name="yRadius" format="dimension"/>
+    </declare-styleable>
 </resources>
