--- a/dinlive_baselib/src/main/res/layout/base_retry.xml
+++ b/dinlive_baselib/src/main/res/layout/base_retry.xml
@@ -3,29 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
     android:gravity="center"
     android:orientation="vertical"
+    android:background="@android:color/white"
     app:theme="@style/Theme.AppCompat.Light">
 
     <ImageView
         android:id="@+id/iv_image"
         android:layout_width="wrap_content"
         android:layout_height="100dp"
-        android:src="@drawable/emptyhint" />
+        android:src="@drawable/no_network" />
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="16dp"
-        android:ellipsize="end"
         android:gravity="center"
-        android:maxLines="3"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:text="似乎出了点问题..."
         android:textColor="#666666"
+        android:maxLines="3"
+        android:ellipsize="end"
         android:textSize="16dp" />
 
     <Button
@@ -33,6 +33,9 @@
         android:layout_width="120dp"
         android:layout_height="36dp"
         android:layout_marginTop="24dp"
+        android:background="@drawable/btn_sure_bg"
+        android:text="重新加载"
+        android:textColor="@color/white"
         android:textSize="16dp" />
 
 </LinearLayout>
