--- a/dinlive_baselib/src/main/res/layout/base_empty.xml
+++ b/dinlive_baselib/src/main/res/layout/base_empty.xml
@@ -12,7 +12,7 @@
         android:id="@+id/iv_image"
         android:layout_width="wrap_content"
         android:layout_height="100dp"
-        android:src="@drawable/emptyhint" />
+        android:src="@drawable/empty_data" />
 
     <TextView
         android:id="@+id/tv_title"
@@ -33,6 +33,8 @@
         android:layout_width="120dp"
         android:layout_height="36dp"
         android:layout_marginTop="24dp"
+        android:background="@drawable/btn_sure_bg"
+        android:textColor="@color/white"
         android:textSize="16dp"
         android:visibility="gone" />
 </LinearLayout>
