--- a/dinlive_baselib/src/main/res/layout/base_loading.xml
+++ b/dinlive_baselib/src/main/res/layout/base_loading.xml
@@ -12,5 +12,6 @@
     <com.qmuiteam.qmui.widget.QMUILoadingView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:color="@color/gray" />
 </FrameLayout>
